traefik-setup/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homeassistant-dev
  namespace: homeassistant
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`homeassistant-dev.lan`)
      kind: Rule
      services:
        - name: homeassistant
          port: 8123
